# web-crawler

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/crawler/: parser.py
src/search/: base.py  engine.py  google.py  searcher.py
src/summarizer/: __init__.py  engine.py  service.py
src/web_crawler/: __init__.py
tests/: test_parser_integration.py  test_searcher_integration.py  test_summarizer_integration.py
