[project]
name = "web-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "virattt", email = "virat.dot@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
web-crawler = "web_crawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
